--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.stopwatchContainer {
+  padding: 10px;
+  background-color: gray;
+  border-radius: 10px;
+  margin-bottom: 10px;
+ }
+  
+ .control-buttons {
+  padding: 10px;
+  background-color: gray;
+  border: none;
+ }
+  
+ .main-button-controls {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  width: 100%;
+  justify-content: center;
+ }
+  
+ .name-label {
+  padding: 10px;
+  background-color: gray;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  text-align: left;
+  border: none;
+  outline: none;
+  width: 100%;
+  color: white;
+ }
+  
+ .main-time-label {
+  font-size: 50px;
+  font-weight: bold;
+  margin-bottom: 10px;
+ }
+  
+ .lap-label{
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: left;
+  width: 500px;
+  margin-top: 20px;
+ }
+  
+ .lap-container{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  gap: 10px;
+  width: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  align-items: center;
+ }
+  
+ .time-label{
+  font-size: 25px;
+  font-weight: bold;
+ }
